--- a/index.html
+++ b/index.html
@@ -570,9 +570,8 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <img src="images/icons/quote.svg" class="quote" alt="">
-                            <p>Outstanding design, user-friendly experience, exceeded expectations.
-                                Professional, creative, and a pleasure to work with. Highly recommended for
-                                projects.</p>
+                            <p> <span data-cn="出色的团队合作者。他在课程项目中展现了扎实的技术能力和创新思维。认真负责，乐于分享，是一位值得信赖的伙伴。">Excellent team player with strong technical skills and innovative thinking shown in coursework. Dedicated,
+                            collaborative, and a reliable partner for projects.</span></p>
                             <div class="author">
                                 <div class="author__image">
                                     <img src="images/avatar.png" alt="">
@@ -583,9 +582,8 @@
                         </div>
                         <div class="swiper-slide">
                             <img src="images/icons/quote.svg" class="quote" alt="">
-                            <p>Outstanding design, user-friendly experience, exceeded expectations.
-                                Professional, creative, and a pleasure to work with. Highly recommended for
-                                projects.</p>
+                            <p> <span data-cn="出色的团队合作者。他在课程项目中展现了扎实的技术能力和创新思维。认真负责，乐于分享，是一位值得信赖的伙伴。">Excellent team player with strong technical skills and innovative thinking shown in coursework. Dedicated,
+                            collaborative, and a reliable partner for projects.</span></p>
                             <div class="author">
                                 <div class="author__image">
                                     <img src="images/avatar.png" alt="">
@@ -596,9 +594,8 @@
                         </div>
                         <div class="swiper-slide">
                             <img src="images/icons/quote.svg" class="quote" alt="">
-                            <p>Outstanding design, user-friendly experience, exceeded expectations.
-                                Professional, creative, and a pleasure to work with. Highly recommended for
-                                projects.</p>
+                            <p> <span data-cn="出色的团队合作者。他在课程项目中展现了扎实的技术能力和创新思维。认真负责，乐于分享，是一位值得信赖的伙伴。">Excellent team player with strong technical skills and innovative thinking shown in coursework. Dedicated,
+                            collaborative, and a reliable partner for projects.</span></p>
                             <div class="author">
                                 <div class="author__image">
                                     <img src="images/avatar.png" alt="">
@@ -621,11 +618,13 @@
             <img src="images/shapes/dawn.svg" class="shape shape--6" data-animate="fade" data-animate-delay="400ms"
                 alt="">
             <div class="cta relative">
-                <h2 class="cta__title" data-animate="fade-right" >Have a Project? <span class="fw-semibold">Let's
+                <h2 class="cta__title" data-animate="fade-right" ><span data-cn="有实习？">Have Internship?</span> <span class="fw-semibold" data-cn="让我们聊聊！">Let's
                         Discuss!</span></h2>
-                <div class="cta__content" data-animate="fade-left">
-                    <p>Discuss your project needs with me; together, we'll create remarkable solutions and
-                        experiences.</p>
+                <div class="cta__content" data-animate="fade-left" >
+                    <p>  
+                        <span data-cn="作为一名计算机专业学生，我正在寻找软件开发相关的实习机会。期待能够在实践中学习和成长。"> A Computer Science student seeking software development internships to learn and grow through practice.
+</span>
+</p>
                     <div class="link-group">
                         <a href="#" class="btn btn--secondary">
                             <span>Download Resume</span>
