--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <aside id="sidebar">
             <div class="sidebar-header">
                 <a href="index.html" aria-label="Logo">
-                    <img src="images/logos/logo.svg" style="height: 70px;" alt="">
-                    <img src="images/logo.svg" style="height: 70px;" alt="">
+                    <!-- <img src="images/logos/logo.svg" style="height: 70px;" alt=""> -->
+                    <img src="images/WechatIMG9062.jpg" style="height: 70px;" alt="">
                 </a>
                 <a href="javascript:void(0);" role="button" id="sidebar_close">&times;</a>
             </div>
